# Saif-Academy

./: $@m!h@+@$n!m.php  .gitignore  Links.txt  README.md  all_info.sql  dataedit.php  db.txt  desktop.ini  form.php  hsc_first_year_1.php  hsc_first_year_2.php  hsc_first_year_3.php  hsc_first_year_new_1.php  hsc_first_year_new_2.php  hsc_first_year_new_3.php  hsc_second_year_1.php  hsc_second_year_2.php  hsc_second_year_3.php  hsc_second_year_new_1.php  hsc_second_year_new_2.php  hsc_second_year_new_3.php  index.php  other.php  package-lock.json  package.json  payment.php  ssc_1.php  ssc_2.php  ssc_3.php  ssc_new_1.php  ssc_new_2.php  ssc_new_3.php
backend/: .env  .env.example  .gitignore  Dockerfile  add_meeting_link_date_column.py  add_missing_column.py  add_profile_pic_column.py  add_rejected_status.py  check_db.py  db.sqlite3  inspect_db.py  list_users.py  live_openapi.json  main.py  manage.py  migrate_v2.py  migrate_v3.py  migrate_v4.py  migrate_v5.py  migrate_v6.py  migrate_v7.py  pyproject.toml  requirements.txt  saif_academy.db  test.py  test_db.py  vercel.json
backend/app/: dependencies.py  main.py  tasks.py
backend/app/config/: database.py  db.py
backend/app/database/: models.py
backend/app/models/: course.py  course_purchase.py  institute.py  progress.py  quiz.py  subcription.py  user.py  user_model.py  video_lesson.py  zoom_class.py
backend/app/utils/: email.py  (+3 more)
backend/prisma/: schema.prisma
backend/saif_academy/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/saif_academy_backend/: manage.py
backend/staticfiles/: staticfiles.json
(+156 files in other folders)
